<resources>
    <string name="app_name">4K Wallpapers - AI Generator</string>

    <string name="hello_blank_fragment">Hello Blank Fragment</string>
    <string name="default_notification_channel_id">Job progress</string>
    <string name="default_web_client_id">AIzaSyAkGtIzLCvBZg9FHrMw_DVqblkNBOc2AFI</string>
    <string name="are_you_sure_you_want_to_exit">Are you sure you want to exit..!</string>

    <string name="txt_ad">AD</string>
    <string name="fgs_description" translatable="false">We are utilizing a specialized type for the foreground service because our use case does not fit within the predefined categories of foreground service types. We are registering a broadcast receiver within the battery animation service. Whenever the device connects to a charger, we initiate an activity where charging animations are displayed. This process cannot be paused; doing so would compromise the user experience. Users have downloaded the app specifically for uninterrupted battery animations.</string>

    <string name="categories">Categories</string>
    <string name="wallpapers">Wallpapers</string>
    <string name="apply_wallpaper">Apply Wallpaper</string>
    <string name="favourites">Favourites</string>
    <string name="your_favorite_list_is_currently_empty_start_adding_items_by_tapping_the">Your favorite list is currently empty. Start adding items by tapping the ❤.</string>
    <string name="you_can_send_feedback_to_our_team">You can send feedback to our team</string>
    <string name="email">Email</string>
    <string name="enter_your_email">Enter your Email</string>
    <string name="full_name">Full Name</string>
    <string name="enter_your_full_name">Enter your full name</string>
    <string name="subject">Subject</string>
    <string name="enter_your_subject">Enter your subject</string>
    <string name="message">Message</string>
    <string name="type_your_message">Type your message</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="generate_wallpaper" translatable="false">Generate Wallpaper</string>
    <string name="type_text_and_generate_wallpaper">Type text and generate Wallpaper</string>
    <string name="wallpaper_inspirations">Wallpaper Inspirations</string>
    <string name="creation">Creation</string>
    <string name="see_all">See All</string>
    <string name="your_creation_list_is_empty_yet_nplease_create_your_own_wallpaper">Your creation list is empty yet\nPlease create your own wallpaper</string>
    <string name="generate">Generate</string>
    <string name="watch_an_ad">Watch an Ad</string>
    <string name="trending">Trending</string>
    <string name="created_wallpaper">Created Wallpaper</string>
    <string name="prompt">Prompt</string>
    <string name="prompt_is_loading">prompt is loading....</string>
    <string name="estimated_time_to_load">Estimated time to load...</string>
    <string name="text_copied_to_clipboard">Text copied to clipboard</string>
    <string name="if_still_not_loaded_then_swipe_down_to_refresh_after_few_second">if still not loaded then swipe down\nto refresh after few seconds</string>
    <string name="settings">Settings</string>
    <string name="rate">Rate</string>
    <string name="other">Other</string>
    <string name="share_app">Share App</string>
    <string name="customer_support">Customer support</string>
    <string name="rate_us">Rate Us</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="more_app">More app</string>
    <string name="change_language">Change Language</string>
    <string name="nature_s_perfection_on_display">Nature\'s Perfection on Display</string>
    <string name="get_started">Get Started</string>
    <string name="ai_generated_wallpapers">4K Wallpapers - AI Generator</string>
    <string name="no_creations_found">No Creations found</string>
    <string name="delete">Delete</string>
    <string name="select_all">Select All</string>
    <string name="unselect_all">Unselect All</string>
    <string name="error_please_try_again">Error please try again</string>
    <string name="no_internet">No Internet</string>
    <string name="you_already_send_feedback_now_you_can_send_again_after_24_hours">you already send feedback, now you can send again after 24 hours</string>
    <string name="must_required_your_mail">must required your mail</string>
    <string name="enter_a_valid_email_address">Enter a valid email address</string>
    <string name="must_required_your_name">must required your name</string>
    <string name="must_required_your_subject">must required your subject</string>
    <string name="anime_odyssey">Anime Odyssey</string>
    <string name="dive_into">: Dive into</string>
    <string name="enchanting_animated_realms">Dive into Enchanting Animated Realms</string>
    <string name="wild_wonders">Wild Wonders</string>
    <string name="captivating_animal_kingdoms">Discover Captivating Animal Kingdoms</string>
    <string name="artistic_essence">Artistic Essence</string>
    <string name="elevate_your">: Elevate Your</string>
    <string name="device_with_creative_mastery">Elevate Your Device with Creative Mastery</string>
    <string name="your_image_not_fetched_properly">your image not fetched properly</string>
    <string name="set_successfully_on_home_screen">Set Successfully on Home Screen</string>
    <string name="set_successfully_on_lock_screen">Set Successfully on Lock Screen</string>
    <string name="set_successfully_on_both">Set Successfully on Both</string>
    <string name="permission_granted_click_again_to_save_image">Permission Granted Click again to save image</string>
    <string name="storage_permission_denied">Storage Permission Denied</string>
    <string name="saved_to_gallery">Saved to Gallery</string>
    <string name="enter_your_prompt">enter your prompt</string>
    <string name="hold_tight_your_masterpiece_is_rendering">Hold tight, your masterpiece is rendering.</string>
    <string name="loading_the_beauty_just_for_you">Loading the beauty, just for you.</string>
    <string name="your_wallpaper_is_in_the_making">Your wallpaper is in the making.</string>
    <string name="creating_your_visual_delight">Creating your visual delight.</string>
    <string name="sit_back_and_relax_while_we_prepare_your_wallpaper">Sit back and relax while we prepare your wallpaper.</string>
    <string name="designing_your_screen_s_new_look">Designing your screen\'s new look.</string>
    <string name="almost_there_customizing_your_background">Almost there, customizing your background.</string>
    <string name="your_wallpaper_is_on_its_way">Your wallpaper is on its way.</string>
    <string name="crafting_your_unique_backdrop">Crafting your unique backdrop.</string>
    <string name="skip"><u>Skip</u></string>
    <string name="re_generate">Re-generate</string>
    <string name="new_generation">New Generation</string>
    <string name="navigate_back">Navigate Back</string>
    <string name="retry">Retry</string>
    <string name="error_loading_please_check_your_internet">Error Loading, Please check your Internet</string>
    <string name="add_favorite">Add Favourites</string>
    <string name="zero_favorites_let_s_fix_that_nstart_by_tapping_the_heart_icon">Zero Favourites? Let\'s fix this! \nStart by tapping the heart icon ️</string>
    <string name="confirm_exit">Confirm Exit ???</string>
    <string name="watch_ad">Watch Ad</string>
    <string name="no_thanks"><u>No, thanks</u></string>
    <string name="no">No</string>
    <string name="are_you_sure_you_want_to_delete">Are you sure you want to delete?</string>
    <string name="confirm_deletion">Confirm Deletion ???</string>
    <string name="thousands_of_new_high_quality_images_everyday">Thousands of new high quality images everyday</string>
    <string name="loading">Loading...</string>
    <string name="popular">Popular</string>
    <string name="live">Live</string>
    <string name="ai_wallpaper">AI wallpaper</string>
    <string name="category">Category</string>
    <string name="gen_ai">Gen AI</string>
    <string name="more">More</string>
    <string name="go">GO</string>
    <string name="premium_upgrade">Premium Upgrade</string>
    <string name="unlock_all_wallpapers">Unlock All Wallpapers</string>
    <string name="completely_ad_free">Completely Ad-Free</string>
    <string name="next_txt"><u>Next</u></string>
    <string name="skip_txt"><u>Skip</u></string>

</resources>