<?xml version="1.0" encoding="utf-8"?>
    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:background="@color/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintHeight_percent="0.09"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/feedbackContainer"
            >
            <RelativeLayout
                android:id="@+id/backButton"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginStart="@dimen/_5sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                >
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/back"
                    android:layout_centerInParent="true"
                    />
            </RelativeLayout>

            <TextView
                android:id="@+id/catTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:textSize="12sp"
                android:text="@string/you_can_send_feedback_to_our_team"
                android:textColor="@color/mywhite"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:textStyle="bold"
                android:fontFamily="@font/raleway_medium"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:id="@+id/feedbackContainer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/_10sdp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header"
        tools:layout_editor_absoluteX="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingHorizontal="@dimen/_20sdp">

            <RelativeLayout
                android:id="@+id/mailContainer"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_65sdp"
                app:layout_constraintBottom_toTopOf="@+id/nameContainer"
                app:layout_constraintHeight_percent=".11"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/title1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:fontFamily="@font/raleway_medium"
                    android:text="@string/email"
                    android:textColor="@color/white"
                    android:textSize="13sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/enterMail"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@+id/title1"
                    android:layout_marginTop="@dimen/_2sdp"
                    android:background="@drawable/input_field"
                    android:fontFamily="@font/raleway_medium"
                    android:gravity="center_vertical"
                    android:textCursorDrawable="@drawable/cursor_ed"
                    android:hint="@string/enter_your_email"
                    android:inputType="textEmailAddress"
                    android:paddingHorizontal="@dimen/_7sdp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/gray"
                    android:textSize="15sp" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/nameContainer"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_65sdp"
                android:layout_marginTop="@dimen/_10sdp"
                app:layout_constraintHeight_percent=".11"
                app:layout_constraintTop_toBottomOf="@+id/mailContainer">

                <TextView
                    android:id="@+id/title2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:fontFamily="@font/raleway_medium"
                    android:text="@string/full_name"
                    android:textColor="@color/white"
                    android:textSize="13sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/enterName"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@+id/title2"
                    android:layout_marginTop="@dimen/_2sdp"
                    android:background="@drawable/input_field"
                    android:fontFamily="@font/raleway_medium"
                    android:gravity="center_vertical"
                    android:textCursorDrawable="@drawable/cursor_ed"
                    android:hint="@string/enter_your_full_name"
                    android:inputType="text"
                    android:paddingHorizontal="@dimen/_7sdp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/gray"
                    android:textSize="15sp" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/subjectContainer"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_65sdp"
                android:layout_marginTop="@dimen/_10sdp"
                app:layout_constraintHeight_percent=".11"
                app:layout_constraintTop_toBottomOf="@+id/nameContainer">

                <TextView
                    android:id="@+id/title3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:fontFamily="@font/raleway_medium"
                    android:text="@string/subject"
                    android:textColor="@color/white"
                    android:textSize="13sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/enterSubject"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@+id/title3"
                    android:layout_marginTop="3dp"
                    android:background="@drawable/input_field"
                    android:fontFamily="@font/raleway_medium"
                    android:gravity="center_vertical"
                    android:textCursorDrawable="@drawable/cursor_ed"
                    android:hint="@string/enter_your_subject"
                    android:inputType="text"
                    android:paddingHorizontal="@dimen/_7sdp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/gray"
                    android:textSize="15sp" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/messageContainer"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_150sdp"
                android:layout_marginTop="@dimen/_10sdp"
                app:layout_constraintHeight_percent=".3"
                app:layout_constraintTop_toBottomOf="@+id/subjectContainer">

                <TextView
                    android:id="@+id/title4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:fontFamily="@font/raleway_medium"
                    android:text="@string/message"
                    android:textColor="@color/white"
                    android:textSize="13sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/enterMessage"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@+id/title4"
                    android:layout_marginTop="@dimen/_2sdp"
                    android:background="@drawable/input_field"
                    android:fontFamily="@font/raleway_medium"
                    android:gravity="start"
                    android:hint="@string/type_your_message"
                    android:textCursorDrawable="@drawable/cursor_ed"
                    android:inputType="textMultiLine"
                    android:minLines="4"
                    android:paddingHorizontal="@dimen/_7sdp"
                    android:paddingTop="@dimen/_5sdp"
                    android:scrollbars="vertical"
                    android:scrollHorizontally="false"
                    android:textColor="@color/white"
                    android:textColorHint="@color/gray"
                    android:textSize="14sp" />
            </RelativeLayout>
            <Button
                android:id="@+id/sendButton"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginHorizontal="@dimen/_15sdp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/_20sdp"
                android:background="@drawable/yellow_frame"
                android:fontFamily="@font/raleway_medium"
                android:gravity="center"
                android:paddingHorizontal="@dimen/_30sdp"
                android:text="@string/send_feedback"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginBottom="@dimen/_20sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/messageContainer" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>