<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.swedaiaiwallpapersart.backgroundanimewallpaperaiphoto.fragments.SplashOnFragment">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/splash_background"
        android:scaleType="centerCrop"
        />
    <VideoView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="108dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.3"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.5"
        android:id="@+id/splash_anim" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:fontFamily="@font/nunito_bold"
        android:textSize="@dimen/_18sdp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/tagline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/app_name"
        />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nature_s_perfection_on_display"
        android:textColor="@color/white"
        android:fontFamily="@font/raleway_medium"
        android:textSize="@dimen/_14sdp"
        android:layout_marginBottom="@dimen/_20sdp"
        app:layout_constraintBottom_toTopOf="@id/splash_anim_bottom"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/tagline"
        />


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_80sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/splash_anim_bottom"
        />

    
    <Button
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:background="@drawable/splash_button_bg"
        android:text="@string/get_started"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="@dimen/_15sdp"
        android:layout_marginHorizontal="@dimen/_30sdp"
        android:textColor="@color/black"
        android:visibility="gone"
        android:textSize="@dimen/_14sdp"
        android:fontFamily="@font/raleway_medium"
        android:textAllCaps="false"
        android:id="@+id/getStarted"
        />

</androidx.constraintlayout.widget.ConstraintLayout>