<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_20sdp"
    android:background="@drawable/bottom_sheet_bg"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:paddingVertical="@dimen/_20sdp"
        android:id="@+id/main_container"
        android:paddingHorizontal="@dimen/_15sdp"

        >



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm_deletion"
            android:textColor="@color/white"
            android:fontFamily="@font/nunito_bold"
            android:textSize="@dimen/_15sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/confirmation_txt"
            />


        <TextView
            android:id="@+id/texttop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/are_you_sure_you_want_to_delete"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:fontFamily="@font/raleway_medium"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@+id/confirmation_txt"
            />
        <Button
            android:id="@+id/btnNo"
            android:layout_width="0dp"
            android:layout_height="@dimen/_30sdp"
            app:layout_constraintWidth_percent="0.4"
            android:gravity="center"
            android:text="@string/no"
            android:background="@drawable/set_button_bg_unsel"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="13sp"
            android:fontFamily="@font/raleway_medium"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btnYes"
            app:layout_constraintTop_toBottomOf="@+id/texttop"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            />
        <Button
            android:id="@+id/btnYes"
            android:layout_width="0dp"
            app:layout_constraintWidth_percent="0.4"
            android:layout_height="@dimen/_30sdp"
            android:gravity="center"
            android:text="Yes"
            android:fontFamily="@font/raleway_medium"
            android:layout_marginTop="@dimen/_20sdp"
            android:textAllCaps="false"
            android:textColor="@color/mywhite"
            android:textSize="15sp"
            app:layout_constraintStart_toEndOf="@id/btnNo"
            android:background="@drawable/set_button_bg_sel"
            app:layout_constraintTop_toBottomOf="@+id/texttop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>